# mentorfy

./: .gitignore  .mcp.json  AGENTS.md  BLACKBOX.md  INTERACTION_INVENTORY.md  Makefile  PLAN_AUTH_GATE.md  index.html  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  .gitignore  ADMIN_DASHBOARD_QUERIES.md  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  Dockerfile  PHASED_PIPELINE_SPEC.md  PIPELINE_IMPLEMENTATION_SPEC_V2.md  README.md  RETRY_BACKOFF_SPEC.md  TESTING_INGESTION_PIPELINE.md  enqueue_failed_kg_jobs.py  ingest-evolution-conversation-dump.txt  org-mapping.json  pyproject.toml  railway.toml  run_scheduler.py  start.sh  start_server.py  supermemory-migration-anomalies.json  test_audio_local.py  test_file_utils.py  usage-tracking-plan-conversation-dump.txt  user-mapping.json  worker-dev.sh
apps/api/.beads/: issues.jsonl
apps/api/.claude/: settings.json
apps/api/docs/: KG_INGEST_PARALLELISM_ANALYSIS.md  PARALLELISM_LEVERS.md
apps/api/mentorfy/api/: app.py  schemas.py
apps/api/mentorfy/core/: RETRY_README.md  metrics.py  pipeline_helpers.py  queues.py  rate_limiter.py  retry_policy.py
apps/api/mentorfy/db/: neo4j.py
apps/api/mentorfy/integrations/: slack.py
apps/api/mentorfy/models/: manager.py  token_counter.py
apps/api/mentorfy/services/: chunking_service.py  document_processor.py  extraction.py  transcription_service.py
apps/api/mentorfy/utils/: deletion.py  file_utils.py  metadata.py  storage.py  text_extraction.py
apps/api/mentorfy/workers/: chunking_worker.py  extraction_worker.py  (+2 more)
apps/api/migrations/: add_import_enrich_ingest_pipeline.sql
(+516 files in other folders)
